--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 					<section data-transition="convex-in fade-out">
 						<img src="assets/team-members.png">
 					</section>
+
+					<section data-background-transition="slide" data-background="assets/themes.jpeg">
+					</section>
 				</section>
 
 				<section>
@@ -100,16 +103,6 @@
 							<li class="fragment fade-in-then-semi-out">Built on top of Mocha and Chai</li>
 							<li class="fragment fade-in-then-semi-out">Cypress Has Debugging Capabilities</li>
 							<li class="fragment fade-in-then-semi-out">Well-documented and easy to understand</li>
-						</ul>
-					</section>
-
-					<section>
-						<h3>What Cypress cannot do</h3>
-						<ul>
-							<li>Doesnt support cross browser testing (only Chrome and Electon from now)</li>
-							<li>Doesnt support iFrame</li>
-							<li>Cross-domain testing</li>
-							<li>Open multiple tabs</li>
 						</ul>
 					</section>
 				</section>
