Add gif and image to slide 3.3-3.7

--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
 	</head>
 	<body>
 		<div class="reveal">
+			<footer class="minimal">
+				<div class="left">
+					E2E and Visual Testing in Shopware 6
+				</div>
+				<div class="center">
+					<img class="logo" src="assets/sw6-logo.svg" alt="Shopware Logo">
+				</div>
+				<div class="right">
+					@Slice&amp;Dice
+				</div>
+			</footer>
 			<div class="slides">
 				<section data-background-transition="slide">
 					<h2>Apply E2E and Visual Testing in Shopware 6</h2>
@@ -78,14 +89,17 @@
 
 					<section data-transition="convex-in fade-out">
 						<h3>and we dont want unexpected changes</h3>
+						<img src="assets/unexpected-changes.gif" alt="unexpected changes" />
 					</section>
 
 					<section data-transition="convex-in fade-out">
 						<h3>so we check all pages</h3>
+						<img src="assets/check-all-page.gif" alt="we check all pages" />
 					</section>
 
 					<section data-transition="convex-in fade-out">
 						<h3>time consuming!</h3>
+						<img src="assets/time-consuming.gif" alt="Time Consuming" />
 					</section>
 				</section>
 
