--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<section>
 					<h2>Agenda</h2>
 					<ul>
-						<li class="fragment fade-in-then-semi-out"><span>The Problems</span></li>
+						<li class="fragment fade-in-then-semi-out"><span>The Challenges</span></li>
 						<li class="fragment fade-in-then-semi-out"><span>Why Cypress?</span></li>
 						<li class="fragment fade-in-then-semi-out"><span>Why Percy?</span></li>
 						<li class="fragment fade-in-then-semi-out"><span>Best Practices</span></li>
@@ -60,7 +60,7 @@
 
 				<section>
 					<section>
-						<h2>The Problems!</h2>
+						<h2>The Challenges!</h2>
 					</section>
 
 					<section data-transition="convex-in fade-out">
