--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
 
      <section data-transition="convex-in fade-out">
       <h3>and we dont want unexpected changes</h3>
-      <img src="assets/unexpected-changes.gif" alt="unexpected changes" />
+      <img style="width: 100%;" src="assets/unexpected-changes.gif" alt="unexpected changes" />
      </section>
 
      <section data-transition="convex-in fade-out">
       <h3>so we check all pages</h3>
-      <img src="assets/check-all-page.gif" alt="we check all pages" />
+      <img style="width: 100%;"  src="assets/check-all-page.gif" alt="we check all pages" />
      </section>
 
      <section data-transition="convex-in fade-out">
@@ -222,26 +222,34 @@
      </section>
 
      <section style="text-align: left">
-      <div class="fragment" style="display: flex; gap: 20px">
+      <div style="display: flex; gap: 20px">
        <img src="assets/checked.svg" style="width: 60px; height: 60px; margin-top: 16px" alt="" />
        <p style="font-weight: bold">Automated process of detecting and reviewing visual UI changes.</p>
       </div>
-      <img src="assets/differ.gif" alt="" />
      </section>
 
+		 <section>
+			<img src="assets/differ.gif" alt="" />
+		 </section>
+
      <section style="text-align: center">
-      <div class="fragment" style="display: flex; gap: 20px">
+      <div style="display: flex; gap: 20px">
        <img src="assets/checked.svg" style="width: 60px; height: 60px; margin-top: 16px" alt="" />
        <p style="font-weight: bold; text-align: left">
         Protect against visual regressions and bugs across browsers and responsive widths.
        </p>
       </div>
-      <img style="height: 200px" src="assets/browsers.png" alt="" />
-      <img src="assets/responsive-width.gif" alt="" />
      </section>
 
+		 <section>
+			<div style="display: grid; grid-template-columns: 30% 70%;">
+				<img src="assets/browsers.png" alt="" />
+      	<img src="assets/responsive-width.gif" alt="" />
+			</div>
+		 </section>
+
      <section style="text-align: center">
-      <div class="fragment" style="display: flex; gap: 20px; justify-content: flex-start">
+      <div style="display: flex; gap: 20px; justify-content: flex-start">
        <img src="assets/checked.svg" style="width: 60px; height: 60px; margin-top: 16px" alt="" />
        <p style="font-weight: bold">
         Get started with visual testing for <span style="font-weight: bold; color: #0e8a09">FREE</span>
@@ -249,6 +257,7 @@
       </div>
       <img style="max-height: 600px" src="assets/percy-pricing.png" alt="" />
      </section>
+
     </section>
 
     <section>
