--- a/index.html
+++ b/index.html
@@ -227,6 +227,9 @@
     <section>
      <section>
       <h2>Why <span style="color: #9e66bf">Percy</span>?</h2>
+      <aside class="notes">
+        Cypress support for logic test but we need to compare UI and need a more visual look for each changes -> Percy
+      </aside>
      </section>
 
      <section style="text-align: left">
@@ -238,7 +241,10 @@
 
 		 <section>
 			<img src="assets/differ.gif" alt="" />
-		 </section>
+      <aside class="notes">
+        - Percy highlighting visual UI changes just one click. Easy to spot changes
+      </aside>
+    </section>
 
      <section style="text-align: center">
       <div style="display: flex; gap: 20px">
@@ -254,6 +260,10 @@
 				<img src="assets/browsers.png" alt="" />
       	<img src="assets/responsive-width.gif" alt="" />
 			</div>
+      <aside class="notes">
+        - Percy Support 4 browsers with multi viewport, user can easily adjust configure based on project requirements.
+        - User can get an intuitive picture of 3 devices with just 3 clicks instead of having to spend a lot up time working with 3 devices
+      </aside>
 		 </section>
 
      <section style="text-align: center">
@@ -264,6 +274,11 @@
        </p>
       </div>
       <img style="max-height: 600px" src="assets/percy-pricing.png" alt="" />
+      <aside class="notes">
+        - Percy support free plan for newcomers, 5000 pictures/month -> recommend to get acquainted
+        - Everyone can start testing with percy right now, Why don't you try?
+      </aside>
+      
      </section>
 
     </section>
