--- a/index.html
+++ b/index.html
@@ -50,7 +50,14 @@
       <img src="assets/team-members.png" />
      </section>
 
-     <section data-background-transition="slide" data-background="assets/themes.jpeg"></section>
+     <section data-background-transition="slide" data-background="assets/themes.jpeg">
+			 <aside class="notes">
+				- Clean and sophisticated design
+				- The open design offers you plenty of space to highlight your product’s features
+				- Striking colour effects by simply changing the primary colour
+				- With just a few, simple changes to the primary colour you can create wonderful colour effects, thus impressing customers.
+			 </aside>
+		 </section>
     </section>
 
     <section>
@@ -62,6 +69,13 @@
       <li class="fragment fade-in-then-semi-out"><span>Best Practices</span></li>
       <li class="fragment fade-in-then-semi-out"><span>Feedbacks/Questions</span></li>
      </ul>
+		 <aside class="notes">
+			Here is the agenda for today. first we will talk about what exactly we do in development Shopware theme
+			<br>
+			how we can delivery awesome themes to our users in a right time.
+			<br>
+			and How we can reduce bugs and spend more time on our users and improvement.
+		</aside>
     </section>
 
     <section>
@@ -72,6 +86,11 @@
      <section data-transition="convex-in fade-out">
       <h3>we have monthly release</h3>
       <img src="assets/check-release.png" />
+			<aside class="notes">
+				at the Shopware, we have monthly release includes many features which Shopware community wanted.
+				<br>
+				we as a theme development always want to give the best to our user, that's why we also have montly update for your premium themes to reflect the newest update, cool features.
+			</aside>
      </section>
 
      <section data-transition="convex-in fade-out">
@@ -80,6 +99,11 @@
        <img src="assets/css-old.png" alt="" />
        <img src="assets/css-new.png" alt="" />
       </div>
+			<aside>
+				not only responsible for keep our themes up to date but we also improve our UI. we want our user had the best experience when using our themes. what's why we constantly update and delivery high quality. 
+				<br>
+				but as you know these changes will have side effects which we are unknown. it may cause the UI is breaking or make something doesnt work anymore.  we want to reduce / prevent these kind of issues as much as possible. but to do that, we need to test thoroughly when there are something changes. this takes too much time and costly.
+			</aside>
      </section>
 
      <section data-transition="convex-in fade-out">
@@ -95,7 +119,13 @@
      <section data-transition="convex-in fade-out">
       <h3>time consuming!</h3>
       <img src="assets/time-consuming.gif" alt="Time Consuming" />
+			<aside class="notes">
+				that's why we started adding Cypress to our themes.
+				<br>
+				there are ton of reason why you should start with Cypress. Here are some key points which I think you should choose Cypress.
+			</aside>
      </section>
+
     </section>
 
     <section>
@@ -109,6 +139,9 @@
        <li class="fragment fade-in-then-semi-out">Well-documented and easy to understand</li>
       </ul>
      </section>
+		 <aside class="notes">
+			E2E test is basically test which testing the workflow from the beginning to the end.
+		 </aside>
     </section>
 
     <section>
