--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <section>
      <section>
-      <h3>Why Cypress?</h3>
+      <h3>Why <span style="color: #04c38e;">Cypress</span>?</h3>
       <ul>
        <li class="fragment fade-in-then-semi-out">Easy to use, especially you are developers</li>
        <li class="fragment fade-in-then-semi-out">Simple to setup</li>
@@ -218,7 +218,7 @@
       <h3>Support</h3>
       <img src="assets/shopware-test-suites.png" alt="" />
       <br />
-      <a style="font-size: 14px" href="https://github.com/shopware/e2e-testsuite-platform" target="_blank"
+      <a style="font-size: 14px; margin-top: -30px; display: block;" href="https://github.com/shopware/e2e-testsuite-platform" target="_blank"
        >E2E Platform Testsuite for Shopware 6</a
       >
      </section>
@@ -226,7 +226,7 @@
 
     <section>
      <section>
-      <h2>Why <span style="color: #9e66bf">Percy?</span></h2>
+      <h2>Why <span style="color: #9e66bf">Percy</span>?</h2>
      </section>
 
      <section style="text-align: left">
