--- a/index.html
+++ b/index.html
@@ -99,21 +99,25 @@
        <img src="assets/css-old.png" alt="" />
        <img src="assets/css-new.png" alt="" />
       </div>
-			<aside>
-				not only responsible for keep our themes up to date but we also improve our UI. we want our user had the best experience when using our themes. what's why we constantly update and delivery high quality. 
-				<br>
-				but as you know these changes will have side effects which we are unknown. it may cause the UI is breaking or make something doesnt work anymore.  we want to reduce / prevent these kind of issues as much as possible. but to do that, we need to test thoroughly when there are something changes. this takes too much time and costly.
+			<aside class="notes">
+				not only responsible for keep our themes up to date but we also improve our UI. we want our user had the best experience when using our themes. what's why we constantly update/improve our code
 			</aside>
      </section>
 
      <section data-transition="convex-in fade-out">
       <h3>and we dont want unexpected changes</h3>
       <img style="width: 100%;" src="assets/unexpected-changes.gif" alt="unexpected changes" />
+			<aside class="notes">
+				but as you know these kind of changes will have side effects which we are unknown. it may cause the UI is breaking or make something doesnt work anymore.
+			</aside>
      </section>
 
      <section data-transition="convex-in fade-out">
       <h3>so we check all pages</h3>
       <img style="width: 100%;"  src="assets/check-all-page.gif" alt="we check all pages" />
+			<aside class="notes">
+				we want to reduce / prevent these kind of issues as much as possible. but to do that, we need to test thoroughly when there are something changes. this takes too much time and costly.s
+			</aside>
      </section>
 
      <section data-transition="convex-in fade-out">
@@ -121,8 +125,6 @@
       <img src="assets/time-consuming.gif" alt="Time Consuming" />
 			<aside class="notes">
 				that's why we started adding Cypress to our themes.
-				<br>
-				there are ton of reason why you should start with Cypress. Here are some key points which I think you should choose Cypress.
 			</aside>
      </section>
 
@@ -140,6 +142,7 @@
       </ul>
      </section>
 		 <aside class="notes">
+			there are ton of reason why you should start with Cypress. Here are some key points which I think you should choose Cypress.
 			E2E test is basically test which testing the workflow from the beginning to the end.
 		 </aside>
     </section>
